# s3nexus

./: CLAUDE.md  Contribution Guidelines.md  Readme.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: Product Requirements Document.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: acl.rs  buckets.rs  local_fs.rs  mod.rs  monitor_cmd.rs  objects.rs  policies.rs  presigned.rs  preview.rs  profiles.rs  settings.rs  sync_cmd.rs  transfers.rs  versioning.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/monitor/: watcher.rs
src-tauri/src/s3/: client.rs  operations.rs
src-tauri/src/sync/: diff.rs  engine.rs  mod.rs
src-tauri/src/transfer/: download.rs  events.rs  manager.rs  mod.rs  multipart.rs  throttle.rs
src/components/about/: AboutModal.tsx
src/components/acl/: AclEditorModal.tsx
src/components/explorer/: ContextMenu.tsx  DeleteConfirmModal.tsx  EmptyState.tsx  FileExplorer.tsx  FileRow.tsx  NewFolderModal.tsx  RenameModal.tsx
src/components/layout/: Breadcrumb.tsx  DualPanelLayout.tsx  Sidebar.tsx  Toolbar.tsx
src/components/local/: LocalBreadcrumb.tsx  LocalContextMenu.tsx  LocalExplorer.tsx  LocalToolbar.tsx
src/components/monitor/: MonitorList.tsx  MonitorSetupModal.tsx
src/lib/: tauri.ts  utils.ts
src/stores/: explorerStore.ts  localExplorerStore.ts  modalStore.ts  profileStore.ts  themeStore.ts  toastStore.ts  transferStore.ts
src/types/: index.ts
(+15 files in other folders)
