[package]
name = "s3-nexus"
version = "0.1.0"
description = "Lightweight cross-platform S3 browser"
authors = ["you"]
edition = "2021"

[lib]
name = "s3_nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS S3
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Encryption
ring = "0.17"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
sha2 = "0.10"
notify = "7"
governor = "0.8"
reqwest = { version = "0.12", features = ["socks"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
